frequent user testing added to README.md

--- a/contact-us.html
+++ b/contact-us.html
@@ -131,6 +131,10 @@
                         <p>Yes. You can contact us anytime to change the date of delivery, prior to the cut-off date stated in the advance email. </p>
                     </details>
                     <details class="content-text text-center faq-questions">
+                        <summary><strong>Can I change the crate size?</strong></summary>
+                        <p>Yes. You can contact us anytime to change the amount of beers you receive, prior to the cut-off date stated in the advance email. </p>
+                    </details>
+                    <details class="content-text text-center faq-questions">
                         <summary><strong>How much does delivery cost?</strong></summary>
                         <p>Nothing. Delivery is included in the cost of your subscription</p>
                     </details>
@@ -140,7 +144,7 @@
                     </details>
                     <details class="content-text text-center faq-questions">
                         <summary><strong>How do I cancel or pause my subscription?</strong></summary>
-                        <p>Simply fill out the form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. We will send email confirmation of any changes made to your subscription.</p>
+                        <p>Simply fill out the form letting us know how long you wish your subscription to be paused for, or if you wish to cancel. Alternatively give us a call. We will send email confirmation of any changes made to your subscription.</p>
                     </details>
                 </div>
 
